ajout tout ce qu'est select match + layout match

--- a/app/src/main/res/layout/fragment_match.xml
+++ b/app/src/main/res/layout/fragment_match.xml
@@ -34,31 +34,33 @@
                     android:id="@+id/button_first"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="92dp"
+                    android:layout_marginBottom="144dp"
                     android:text="@string/History"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.872"
+                    app:layout_constraintHorizontal_bias="0.813"
                     app:layout_constraintStart_toStartOf="parent" />
 
                 <Button
                     android:id="@+id/NEW_Match"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="28dp"
+                    android:layout_marginBottom="16dp"
                     android:text="@string/Add"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.498"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    app:layout_constraintHorizontal_bias="0.445"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/button"
+                    app:layout_constraintVertical_bias="0.0" />
 
                 <EditText
                     android:id="@+id/Critique"
-                    android:layout_width="211dp"
-                    android:layout_height="92dp"
-                    android:layout_marginTop="96dp"
-                    android:layout_marginEnd="40dp"
-                    android:layout_marginRight="40dp"
+                    android:layout_width="217dp"
+                    android:layout_height="48dp"
+                    android:layout_marginTop="76dp"
+                    android:layout_marginEnd="48dp"
+                    android:layout_marginRight="48dp"
                     android:background="@color/white"
                     android:ems="10"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -68,14 +70,12 @@
                     android:id="@+id/critique"
                     android:layout_width="87dp"
                     android:layout_height="0dp"
-                    android:layout_marginEnd="56dp"
-                    android:layout_marginRight="56dp"
-                    android:layout_marginBottom="168dp"
+                    android:layout_marginStart="28dp"
+                    android:layout_marginLeft="28dp"
+                    android:layout_marginBottom="196dp"
                     android:ems="10"
                     android:text="CRITIQUE"
                     app:layout_constraintBottom_toTopOf="@+id/button"
-                    app:layout_constraintEnd_toStartOf="@+id/Critique"
-                    app:layout_constraintHorizontal_bias="0.176"
                     app:layout_constraintStart_toStartOf="parent" />
 
                 <SeekBar
@@ -93,10 +93,11 @@
                     android:progress="0"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="1.0"
+                    app:layout_constraintHorizontal_bias="0.971"
                     app:layout_constraintStart_toEndOf="@+id/TestScore"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/seekBarScore" />
+                    app:layout_constraintTop_toTopOf="@+id/seekBarScore"
+                    app:layout_constraintVertical_bias="0.0" />
 
                 <Button
                     android:id="@+id/button"
@@ -104,7 +105,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="28dp"
                     android:layout_marginLeft="28dp"
-                    android:layout_marginBottom="92dp"
+                    android:layout_marginBottom="144dp"
                     android:text="@string/Addloc"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
@@ -115,7 +116,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="28dp"
                     android:layout_marginLeft="28dp"
-                    android:layout_marginBottom="176dp"
+                    android:layout_marginBottom="240dp"
                     android:text="@string/Addpicture"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
@@ -124,9 +125,9 @@
                     android:id="@+id/TestScore"
                     android:layout_width="74dp"
                     android:layout_height="17dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginTop="48dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="32dp"
                     android:ems="10"
                     android:text="@string/Score"
                     app:layout_constraintStart_toStartOf="parent"
@@ -135,11 +136,11 @@
                 <SeekBar
                     android:id="@+id/seekBarScore"
                     style="@style/Widget.AppCompat.SeekBar.Discrete"
-                    android:layout_width="295dp"
-                    android:layout_height="30dp"
-                    android:layout_marginStart="28dp"
-                    android:layout_marginLeft="28dp"
-                    android:layout_marginTop="40dp"
+                    android:layout_width="291dp"
+                    android:layout_height="26dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="32dp"
                     android:max="10"
                     android:progress="0"
                     app:layout_constraintStart_toEndOf="@+id/TestScore"
@@ -193,9 +194,9 @@
                     android:id="@+id/imageView"
                     android:layout_width="100dp"
                     android:layout_height="92dp"
-                    android:layout_marginStart="224dp"
-                    android:layout_marginLeft="224dp"
-                    android:layout_marginBottom="152dp"
+                    android:layout_marginStart="240dp"
+                    android:layout_marginLeft="240dp"
+                    android:layout_marginBottom="220dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     tools:srcCompat="@tools:sample/avatars" />
