--- a/app/src/main/res/layout/fragment_select_match.xml
+++ b/app/src/main/res/layout/fragment_select_match.xml
@@ -204,12 +204,12 @@
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="56dp"
         android:layout_marginEnd="48dp"
         android:layout_marginRight="48dp"
-        android:layout_marginBottom="110dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView14"
+        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
         tools:src="@tools:sample/avatars" />
 
     <TextView
