--- a/app/src/main/res/layout/fragment_select_match.xml
+++ b/app/src/main/res/layout/fragment_select_match.xml
@@ -143,6 +143,7 @@
             android:layout_marginLeft="24dp"
             android:layout_marginTop="64dp"
             android:text="TextView"
+            android:textAlignment="center"
             app:layout_constraintStart_toStartOf="@+id/textView6"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -154,6 +155,7 @@
             android:layout_marginRight="27dp"
             android:layout_marginBottom="108dp"
             android:text="TextView"
+            android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/textView9" />
 
@@ -165,6 +167,7 @@
             app:layout_constraintBottom_toBottomOf="@+id/textStrength"
             app:layout_constraintEnd_toEndOf="@+id/textName"
             app:layout_constraintHorizontal_bias="1.0"
+            android:textAlignment="center"
             app:layout_constraintStart_toStartOf="@+id/textName"
             app:layout_constraintTop_toTopOf="@+id/textStrength"
             app:layout_constraintVertical_bias="0.0" />
@@ -223,6 +226,8 @@
         android:layout_marginRight="27dp"
         android:layout_marginBottom="37dp"
         android:text="TextView"
+        android:textSize="20dp"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintEnd_toStartOf="@+id/imageView2"
         app:layout_constraintStart_toStartOf="parent"
