--- a/app/src/main/res/layout/fragment_stat.xml
+++ b/app/src/main/res/layout/fragment_stat.xml
@@ -45,8 +45,8 @@
         android:layout_marginTop="32dp"
         android:text="@string/Score"
         android:textAlignment="center"
-        android:textSize="25dp"
         android:textColor="@color/purple_700"
+        android:textSize="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -58,9 +58,19 @@
         android:layout_marginBottom="15dp"
         android:text="@string/Strengh"
         android:textAlignment="center"
-        android:textSize="25dp"
         android:textColor="@color/purple_700"
+        android:textSize="25dp"
         app:layout_constraintBottom_toTopOf="@+id/graphView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="22dp"
+        android:text="@string/Back"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/graphView2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
