--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -45,9 +45,9 @@
         android:id="@+id/switchLandscape"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="88dp"
-        android:layout_marginLeft="88dp"
-        android:layout_marginBottom="272dp"
+        android:layout_marginStart="@dimen/setting2"
+        android:layout_marginLeft="@dimen/setting2"
+        android:layout_marginBottom="@dimen/setting1"
         android:text="OFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,6 +59,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="3dp"
         android:text="@string/SwitchLang"
+        android:textSize="20dp"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="@+id/switchEnglish"
         app:layout_constraintEnd_toEndOf="@+id/textView2"
         app:layout_constraintStart_toStartOf="@+id/textView2" />
@@ -69,6 +71,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="2dp"
         android:text="@string/SwitchDark"
+        android:textSize="20dp"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="@+id/switchDark"
         app:layout_constraintEnd_toEndOf="@+id/textView3"
         app:layout_constraintStart_toStartOf="@+id/textView3" />
@@ -81,6 +85,8 @@
         android:layout_marginLeft="49dp"
         android:layout_marginTop="10dp"
         android:text="@string/SwitchLand"
+        android:textSize="20dp"
+        android:textColor="@color/black"
         app:layout_constraintStart_toEndOf="@+id/switchLandscape"
         app:layout_constraintTop_toTopOf="@+id/switchLandscape" />
 
@@ -90,7 +96,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="104dp"
         android:layout_marginBottom="104dp"
-        android:text="SETTINGS"
+        android:text="@string/settings"
+        android:textColor="@color/black"
+        android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
