--- a/app/src/main/res/layout/fragment_stat.xml
+++ b/app/src/main/res/layout/fragment_stat.xml
@@ -9,10 +9,10 @@
     <com.jjoe64.graphview.GraphView
         android:id="@+id/graphView"
         android:layout_width="330dp"
-        android:layout_height="165dp"
+        android:layout_height="@dimen/stat2"
         android:layout_marginStart="37dp"
         android:layout_marginLeft="37dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="@dimen/stat3"
         android:layout_marginEnd="37dp"
         android:layout_marginRight="37dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,10 +25,10 @@
     <com.jjoe64.graphview.GraphView
         android:id="@+id/graphView2"
         android:layout_width="330dp"
-        android:layout_height="165dp"
+        android:layout_height="@dimen/stat2"
         android:layout_marginStart="37dp"
         android:layout_marginLeft="37dp"
-        android:layout_marginTop="356dp"
+        android:layout_marginTop="@dimen/stat1"
         android:layout_marginEnd="37dp"
         android:layout_marginRight="37dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,12 +42,14 @@
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="@dimen/stat4"
+        android:layout_marginLeft="@dimen/stat4"
+        android:layout_marginTop="36dp"
         android:text="@string/Score"
-        android:textAlignment="center"
+        android:textAlignment="gravity"
         android:textColor="@color/purple_700"
         android:textSize="25dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@dimen/stat4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -55,22 +57,25 @@
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
+        android:layout_marginStart="@dimen/stat8"
+        android:layout_marginLeft="@dimen/stat8"
+        android:layout_marginBottom="8dp"
         android:text="@string/Strengh"
         android:textAlignment="center"
         android:textColor="@color/purple_700"
         android:textSize="25dp"
         app:layout_constraintBottom_toTopOf="@+id/graphView2"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@dimen/stat4"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/button4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="22dp"
+        android:layout_marginStart="@dimen/stat5"
+        android:layout_marginLeft="@dimen/stat5"
+        android:layout_marginBottom="@dimen/stat6"
         android:text="@string/Back"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/graphView2" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
