--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -18,8 +18,8 @@
         android:id="@+id/New"
         android:layout_width="150dp"
         android:layout_height="80dp"
-        android:layout_marginTop="190dp"
-        android:layout_marginBottom="115dp"
+        android:layout_marginTop="@dimen/menu1"
+        android:layout_marginBottom="@dimen/menu2"
         android:background="@color/button"
         android:text="@string/New"
         app:layout_constraintBottom_toTopOf="@+id/History"
