--- a/app/src/main/res/layout/fragment_match.xml
+++ b/app/src/main/res/layout/fragment_match.xml
@@ -81,21 +81,14 @@
                 <SeekBar
                     android:id="@+id/seekBarStrength"
                     style="@style/Widget.AppCompat.SeekBar.Discrete"
-                    android:layout_width="289dp"
-                    android:layout_height="27dp"
-                    android:layout_marginStart="132dp"
-                    android:layout_marginLeft="132dp"
+                    android:layout_width="302dp"
+                    android:layout_height="24dp"
                     android:layout_marginTop="43dp"
-                    android:layout_marginEnd="2dp"
-                    android:layout_marginRight="2dp"
                     android:layout_marginBottom="416dp"
                     android:max="10"
                     android:progress="0"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.971"
-                    app:layout_constraintStart_toEndOf="@+id/TestScore"
-                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/seekBarScore"
                     app:layout_constraintVertical_bias="0.0" />
 
@@ -125,7 +118,7 @@
                     android:id="@+id/TestScore"
                     android:layout_width="74dp"
                     android:layout_height="17dp"
-                    android:layout_marginStart="8dp"
+                    android:layout_marginStart="@dimen/match2"
                     android:layout_marginLeft="8dp"
                     android:layout_marginTop="32dp"
                     android:ems="10"
@@ -138,7 +131,7 @@
                     style="@style/Widget.AppCompat.SeekBar.Discrete"
                     android:layout_width="291dp"
                     android:layout_height="26dp"
-                    android:layout_marginStart="20dp"
+                    android:layout_marginStart="@dimen/match1"
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="32dp"
                     android:max="10"
