--- a/app/src/main/res/layout/fragment_select_match.xml
+++ b/app/src/main/res/layout/fragment_select_match.xml
@@ -13,7 +13,7 @@
         android:id="@+id/textview_second"
         android:layout_width="328dp"
         android:layout_height="0dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="@dimen/st7"
         android:text="@string/Recap"
         android:textAlignment="center"
         android:textColor="@color/purple_700"
@@ -29,19 +29,17 @@
         android:id="@+id/button_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="@dimen/st4"
+        android:layout_marginRight="@dimen/st4"
+        android:layout_marginBottom="@dimen/st3"
         android:text="@string/Back"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView14"
-        app:layout_constraintVertical_bias="0.712" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/frameLayout"
         android:layout_width="368dp"
-        android:layout_height="267dp"
+        android:layout_height="@dimen/st2"
         android:layout_marginStart="4dp"
         android:layout_marginLeft="4dp"
         android:layout_marginTop="20dp"
@@ -57,7 +55,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/frameLayout2"
             android:layout_width="171dp"
-            android:layout_height="102dp"
+            android:layout_height="@dimen/st8"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:background="#DFD5F1"
@@ -116,7 +114,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/frameLayout3"
             android:layout_width="170dp"
-            android:layout_height="101dp"
+            android:layout_height="@dimen/st8"
             android:background="#DFD5F1"
             android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"
@@ -125,8 +123,8 @@
 
             <TextView
                 android:id="@+id/textView7"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_width="150dp"
+                android:layout_height="25dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="26dp"
@@ -238,8 +236,8 @@
 
         <TextView
             android:id="@+id/textView13"
-            android:layout_width="206dp"
-            android:layout_height="74dp"
+            android:layout_width="201dp"
+            android:layout_height="56dp"
             android:layout_marginTop="8dp"
             android:text="TextView"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -253,33 +251,26 @@
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
         android:layout_marginEnd="48dp"
         android:layout_marginRight="48dp"
+        android:layout_marginBottom="152dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView14"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
         tools:src="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/textView14"
-        android:layout_width="0dp"
-        android:layout_height="75dp"
-        android:layout_marginStart="49dp"
+        android:layout_width="129dp"
+        android:layout_height="82dp"
+        android:layout_marginStart="@dimen/st6"
         android:layout_marginLeft="49dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="27dp"
-        android:layout_marginRight="27dp"
-        android:layout_marginBottom="37dp"
+        android:layout_marginBottom="@dimen/st5"
         android:text="TextView"
-        android:textColor="@color/black"
 
+        android:textColor="@color/black"
         android:textSize="20dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-        app:layout_constraintEnd_toStartOf="@+id/imageView2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
