--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="background">#F3BEAD</color>
+    <color name="background">#A9AECF</color>
     <color name="tab">#BF8D8A</color>
     <color name="button">#775DA5</color>
     <color name="purple_200">#FFBB86FC</color>
